[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-testing"
description = "Module with common libraries and methods used in Modular Framework Design (MFD) ..."
requires-python = ">=3.10, <3.14"
version = "0.0.0"
dynamic = ["readme", "dependencies"]

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]

[tool.semantic_release]
version_toml = "2.5.5"
version_source = "tag"

[project.urls]
homepage = "https://intel.com/"