[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "mfd-testing"
description = "Module with common libraries and methods used in Modular Framework Design (MFD) ..."
requires-python = ">=3.10, <3.14"
version = "2.10.2"
readme = "README.md"

[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_source = "tag"

[project.urls]
homepage = "https://intel.com/"