[build-system]
requires = [
    "setuptools>=80.4.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]

dependencies = { file = ["requirements.txt"] }

[project]
name = "mfd-testing"
description = "Module for a code quality related scripts."
requires-python = ">=3.10, <3.14"
version = "1.2.0"
dynamic = ["dependencies"]
license-files = ["LICENSE.md", "AUTHORS.md"]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
Homepage = "https://github.com/pmarusz/mfd-testing"
[tool.setuptools.packages.find]
exclude = ["examples", "tests*", "sphinx-doc"]
